--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://rickyginting.github.io/" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="My Page - IOCSCience" />
-    <meta property="og:description" content="Sometimes I just want to give it all up and become a handsome billionaire 😊" />
+    <meta property="og:description" content="Institute Of Computer Science adalah lembaga riset, konsultasi dan publikasi yang disingkat dengan IOCS atau IOCSCience" />
     <meta property="og:image" content="images/meta.jpg" />
 
     <!-- FONT
