--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="https://rickyginting.github.io/" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="My Page - IOCSCience" />
+    <meta property="og:title" content="IOCSCience" />
     <meta property="og:description" content="Institute Of Computer Science adalah lembaga riset, konsultasi dan publikasi yang disingkat dengan IOCS atau IOCSCience" />
     <meta property="og:image" content="images/meta.jpg" />
 
