--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>My Page - Institute Of Computer Science (IOCSCience)</title>
+    <title>Institute Of Computer Science (IOCSCience)</title>
     <meta name="description" content="Find us online!">
     <meta name="author" content="IOCSCience">
 
