--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h1>IOCSCience</h1>
 
                 <!-- Short Bio -->
-                <p>Sometimes I just want to give it all up and become a handsome billionaire 😊</p>
+                <p>Institute Of Computer Science adalah Lembaga Riset, Konsultasi dan Publikasi yang disingkat dengan IOCS atau IOCSCience</p>
 
 
                 <!-- Github -->
