--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,17 +6,17 @@
     <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Institute Of Computer Science (IOCSCience)</title>
+    <title>My Page - Ricky Martin Ginting</title>
     <meta name="description" content="Find us online!">
-    <meta name="author" content="IOCSCience">
+    <meta name="author" content="Ricky Martin Ginting">
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:url" content="https://rickyginting.github.io/" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="IOCSCience" />
-    <meta property="og:description" content="Institute Of Computer Science adalah lembaga riset, konsultasi dan publikasi yang disingkat dengan IOCS atau IOCSCience" />
+    <meta property="og:title" content="My Page - Ricky Martin Ginting" />
+    <meta property="og:description" content="Sometimes I just want to give it all up and become a handsome billionaire 😊" />
     <meta property="og:image" content="images/meta.jpg" />
 
     <!-- FONT
@@ -49,10 +48,10 @@
                 <img src="images/profil.png" srcset="images/profil.png 2x" alt="LittleLink Logo">
 
                 <!-- Title -->
-                <h1>IOCSCience</h1>
+                <h1>Ricky Martin Ginting</h1>
 
                 <!-- Short Bio -->
-                <p>Institute Of Computer Science adalah Lembaga Riset, Konsultasi dan Publikasi yang disingkat dengan IOCS atau IOCSCience</p>
+                <p>Sometimes I just want to give it all up and become a handsome billionaire 😊</p>
 
 
                 <!-- Github -->
@@ -68,7 +67,7 @@
                 <br>
 
                 <!-- Facebook -->
-                <a class="button button-faceb" href="https://facebook.com/amranmanalu" target="_blank" rel="noopener"><img class="icon" src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
+                <a class="button button-faceb" href="https://facebook.com/rickymartinginting" target="_blank" rel="noopener"><img class="icon" src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
                 <br>
 
                 <!-- Facebook Messenger -->
@@ -102,14 +101,14 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-body">
-                    ORIS (QR Code Standar Pemabayran Nasional)
+                    Bank Mandiri - KCP Medan Sei Rampah
                     <hr>
                     <table>
                         <tr>
-                            <td>Nama : IOCSCIENCE</td>
+                            <td>Nama : RICKY MARTIN GINTING</td>
                         </tr>
                         <tr>
-                            <th> https://enrichment.iocspublisher.org/public/site/images/enrichment/1ok.jpg</th>
+                            <th> No. Rek : 1070015342878</th>
                         </tr>
                     </table>
                 </div>
