--- a/index.html
+++ b/index.html
@@ -1,130 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
+  <head>
     <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta charset="utf-8">
-    <title>My Page - Ricky Martin Ginting</title>
-    <meta name="description" content="Find us online!">
-    <meta name="author" content="Ricky Martin Ginting">
+    <meta charset="utf-8" />
+    <title>IOCSCience</title>
+    <meta name="description" content="Find us online!" />
+    <meta name="author" content="IOCSCience" />
 
     <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:url" content="https://rickyginting.github.io/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:url" content="https://IOCSCience.github.io/" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="My Page - Ricky Martin Ginting" />
-    <meta property="og:description" content="Sometimes I just want to give it all up and become a handsome billionaire 😊" />
+    <meta property="og:title" content="IOCSCience" />
+    <meta
+      property="og:description"
+      content="Institute Of Computer Science yang disingkat dengan IOCS atau IOCSCience adalah Lembaga Riset, Konsultasi dan Publikasi"
+    />
     <meta property="og:image" content="images/meta.jpg" />
 
     <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton-light.css">
-    <link rel="stylesheet" href="css/brands.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/skeleton-light.css" />
+    <link rel="stylesheet" href="css/brands.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/coliss.png">
+    <link rel="icon" type="image/png" href="images/coliss.png" />
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container">
-        <div class="row">
-            <div class="column" style="margin-top: 10%">
+      <div class="row">
+        <div class="column" style="margin-top: 10%">
+          <!-- Your Image Here -->
+          <img
+            src="images/profil.jpg"
+            srcset="images/profil.jpg 2x"
+            alt="LittleLink Logo"
+          />
 
+          <!-- Title -->
+          <h1>IOCSCience</h1>
 
-                <!-- Your Image Here -->
-                <img src="images/profil.png" srcset="images/profil.png 2x" alt="LittleLink Logo">
+          <!-- Short Bio -->
+          <p>
+            Institute Of Computer Science yang disingkat dengan IOCS atau
+            IOCSCience adalah Lembaga Riset, Konsultasi dan Publikasi dalam
+            Bidang :
+          </p>
 
-                <!-- Title -->
-                <h1>Ricky Martin Ginting</h1>
+          <!-- Enrichment : Journal of Management -->
+          <a
+            class="button button-github"
+            href="https://enrichment.iocspublisher.org/index.php/enrichment/"
+            target="_blank"
+            rel="noopener"
+            ><img
+              class="icon"
+              src="images/icons/github.svg"
+              alt="GitHub Logo"
+            />Ilmu Manajemen Enrichment</a
+          >
+          <br />
 
-                <!-- Short Bio -->
-                <p>Sometimes I just want to give it all up and become a handsome billionaire 😊</p>
+          <!-- Jurnal Mantik -->
+          <a
+            class="button button-twit"
+            href="https://iocscience.org/ejournal/index.php/mantik"
+            target="_blank"
+            rel="noopener"
+            ><img
+              class="icon"
+              src="images/icons/twitter.svg"
+              alt="Twitter Logo"
+            />Komputer, Komunikasi Mantik</a
+          >
+          <br />
 
+          <!-- Science Midwifery -->
+          <a
+            class="button button-instagram"
+            href="https://midwifery.iocspublisher.org/index.php/midwifery"
+            target="_blank"
+            rel="noopener"
+            ><img
+              class="icon"
+              src="images/icons/instagram.svg"
+              alt="Instagram Logo"
+            />Kesehatan-Science Midwifery</a
+          >
+          <br />
 
-                <!-- Github -->
-                <a class="button button-github" href="https://github.com/rickyginting/" target="_blank" rel="noopener"><img class="icon" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
-                <br>
+          <!-- Jurnal Fruitset -->
+          <a
+            class="button button-faceb"
+            href="https://iocscience.org/ejournal/index.php/Fruitset"
+            target="_blank"
+            rel="noopener"
+            ><img
+              class="icon"
+              src="images/icons/facebook.svg"
+              alt="Facebook Logo"
+            />Pertanian-Jurnal Fruitset</a
+          >
+          <br />
 
-                <!-- Twitter -->
-                <a class="button button-twit" href="https://twitter.com/rickyginting_" target="_blank" rel="noopener"><img class="icon" src="images/icons/twitter.svg" alt="Twitter Logo">Twitter</a>
-                <br>
+          <!-- Cendikia -->
+          <a
+            class="button button-linked"
+            href="Cendikia : Media Jurnal Ilmiah Pendidikan"
+            target="_blank"
+            rel="noopener"
+            ><img
+              class="icon"
+              src="images/icons/linkedin.svg"
+              alt="LinkedIn Logo"
+            />Pendidikan-Cendikia</a
+          >
+          <br />
 
-                <!-- Instagram -->
-                <a class="button button-instagram" href="https://instagram.com/rickyginting_" target="_blank" rel="noopener"><img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
-                <br>
+          <!-- WhatsApp -->
+          <a
+            class="button button-telegram"
+            href="https://api.whatsapp.com/send/?phone=%2B6281361444108&text&type=phone_number&app_absent=0"
+            target="_blank"
+            rel="noopener"
+            ><img
+              class="icon"
+              src="images/icons/whatsapp.svg"
+              alt="Telegram Logo"
+            />WhatsApp</a
+          >
+          <br />
 
-                <!-- Facebook -->
-                <a class="button button-faceb" href="https://facebook.com/rickymartinginting" target="_blank" rel="noopener"><img class="icon" src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
-                <br>
+          <!-- Telegram -->
+          <a
+            class="button button-telegram"
+            href="https://t.me/iocspublisher"
+            target="_blank"
+            rel="noopener"
+            ><img
+              class="icon"
+              src="images/icons/telegram.svg"
+              alt="Telegram Logo"
+            />Telegram</a
+          >
+          <br />
 
-                <!-- Facebook Messenger -->
-                <a class="button button-messenger" href="https://m.me/rickymartinginting" target="_blank" rel="noopener"><img class="icon" src="images/icons/messenger.svg" alt="Facebook Messenger Logo">Chat on Messenger</a>
-                <br>
+          <!-- YouTube -->
+          <a
+            class="button button-yt"
+            href="https://www.youtube.com/@EdukasiDanBudayaNusantara/streams"
+            target="_blank"
+            rel="noopener"
+            ><img
+              class="icon"
+              src="images/icons/youtube.svg"
+              alt="YouTube Logo"
+            />YouTube</a
+          >
+          <br />
 
-                <!-- LinkedIn -->
-                <a class="button button-linked" href="https://www.linkedin.com/in/rickymartinginting" target="_blank" rel="noopener"><img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
-                <br>
-
-                <!-- YouTube -->
-                <a class="button button-yt" href="https://youtube.com/c/RickyMartinGinting" target="_blank" rel="noopener"><img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a>
-                <br>
-
-                <!-- Email -->
-                <a class="button button-default" href="mailto:rickymartinginting503@gmail.com" target="_blank" rel="noopener"><img class="icon" src="images/icons/email.svg" alt="Email Icon">Email</a>
-                <br>
-
-                <!-- Telegram -->
-                <a class="button button-telegram" href="https://t.me/rickyid" target="_blank" rel="noopener"><img class="icon" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
-                <br>
-
-                <a class="button button-mandiri" type="button" rel="noopener" data-toggle="modal" data-target="#mandiriModal"><img class="icon" src="images/icons/mandiri.svg" alt="Mandiri Logo">Bank Mandiri</a>
-                <br>
-            </div>
+          <a
+            class="button button-mandiri"
+            type="button"
+            rel="noopener"
+            data-toggle="modal"
+            data-target="#mandiriModal"
+            ><img class="icon" src="images/icons/chat.png" alt="chat" />Support
+            Contact</a
+          >
+          <br />
         </div>
+      </div>
     </div>
 
     <!-- Modal -->
-    <div class="modal fade" id="mandiriModal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-body">
-                    Bank Mandiri - KCP Medan Sei Rampah
-                    <hr>
-                    <table>
-                        <tr>
-                            <td>Nama : RICKY MARTIN GINTING</td>
-                        </tr>
-                        <tr>
-                            <th> No. Rek : 1070015342878</th>
-                        </tr>
-                    </table>
-                </div>
-            </div>
+    <div
+      class="modal fade"
+      id="mandiriModal"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            Support Contact
+            <hr />
+            <table>
+              <tr>
+                <th>>WhatsApp : 0813-6144-4108</th>
+              </tr>
+              <tr>
+                <th>WhatsApp : 0813-8125-1442</th>
+              </tr>
+              <tr>
+                <th>WhatsApp : 0813-6000-0891</th>
+              </tr>
+              <tr>
+                <th>WhatsApp : 0813-6000-0214</th>
+              </tr>
+            </table>
+          </div>
         </div>
+      </div>
     </div>
 
-
-
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
     <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
-
-
+  </body>
 </html>
