--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     />
     <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="images/coliss.png" />
+    <link rel="icon" type="image/png" href="images/meta.png" />
   </head>
 
   <body>
