--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
           <!-- Your Image Here -->
           <img
             src="images/profil.jpg"
-            srcset="images/profil.jpg 4x"
+            srcset="images/profil.jpg 5x"
             alt="LittleLink Logo"
           />
 
           <!-- Title -->
-          <h1>IOCSCience</h1>
+          <!-- <h1>IOCSCience</h1> -->
 
           <!-- Short Bio -->
           <p>
