--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           />
 
           <!-- Title -->
-          <!-- <h1>IOCSCience</h1> -->
+          <h1>IOCSCience</h1>
 
           <!-- Short Bio -->
           <p>
