--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <!-- Your Image Here -->
           <img
             src="images/profil.jpg"
-            srcset="images/profil.jpg 3x"
+            srcset="images/profil.jpg 2.5x"
             alt="LittleLink Logo"
           />
 
@@ -207,7 +207,7 @@
             <hr />
             <table>
               <tr>
-                <th>>WhatsApp : 0813-6144-4108</th>
+                <th>WhatsApp : 0813-6144-4108</th>
               </tr>
               <tr>
                 <th>WhatsApp : 0813-8125-1442</th>
