--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             rel="noopener"
             ><img
               class="icon"
-              src="images/icons/github.svg"
+              src="images/icons/Enrichment.png"
               alt="GitHub Logo"
             />Ilmu Manajemen Enrichment</a
           >
@@ -88,7 +88,7 @@
             rel="noopener"
             ><img
               class="icon"
-              src="images/icons/twitter.svg"
+              src="images/icons/Mantik.png"
               alt="Twitter Logo"
             />Komputer, Komunikasi Mantik</a
           >
@@ -102,7 +102,7 @@
             rel="noopener"
             ><img
               class="icon"
-              src="images/icons/instagram.svg"
+              src="images/icons/Science Midwifery.png"
               alt="Instagram Logo"
             />Kesehatan-Science Midwifery</a
           >
@@ -116,7 +116,7 @@
             rel="noopener"
             ><img
               class="icon"
-              src="images/icons/facebook.svg"
+              src="images/icons/Fruitset Sains.png"
               alt="Facebook Logo"
             />Pertanian-Jurnal Fruitset</a
           >
@@ -130,7 +130,7 @@
             rel="noopener"
             ><img
               class="icon"
-              src="images/icons/linkedin.svg"
+              src="images/icons/Cendikia.png"
               alt="LinkedIn Logo"
             />Pendidikan-Cendikia</a
           >
