--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <!-- Cendikia -->
           <a
             class="button button-linked"
-            href="Cendikia : Media Jurnal Ilmiah Pendidikan"
+            href="https://iocscience.org/ejournal/index.php/Cendikia"
             target="_blank"
             rel="noopener"
             ><img
@@ -133,6 +133,20 @@
               src="images/icons/Cendikia.png"
               alt="LinkedIn Logo"
             />Pendidikan-Cendikia</a
+          >
+          <br />
+
+                    <!-- JMAS -->
+          <a
+            class="button button-linked"
+            href="https://exsys.iocspublisher.org/index.php/JMAS"
+            target="_blank"
+            rel="noopener"
+            ><img
+              class="icon"
+              src="images/icons/Cendikia.png"
+              alt="LinkedIn Logo"
+            />Journal of Management Science JMAS</a
           >
           <br />
 
