--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             rel="noopener"
             ><img
               class="icon"
-              src="images/icons/Cendikia.png"
+              src="images/icons/jmas.png"
               alt="LinkedIn Logo"
             />Journal of Management Science JMAS</a
           >
