--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               class="icon"
               src="images/icons/JMAS.png"
               alt="LinkedIn Logo"
-            />Journal of Management Science JMAS</a
+            />Journal of Management Science</a
           >
           <br />
 
